fea:driver getverifycode is completed
