# backend/driver/api/driver/v1/driver.pb.go
@@ -1,0 +1,299 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.34.2
+// 	protoc        v3.12.4
+// source: api/driver/v1/driver.proto
+
+package s
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Type int32
+
+const (
+	Type_DEFAULT Type = 0
+	Type_DIGIT   Type = 1
+	Type_LETTER  Type = 2
+	Type_MIXED   Type = 3
+)
+
+// Enum value maps for Type.
+var (
+	Type_name = map[int32]string{
+		0: "DEFAULT",
+		1: "DIGIT",
+		2: "LETTER",
+		3: "MIXED",
+	}
+	Type_value = map[string]int32{
+		"DEFAULT": 0,
+		"DIGIT":   1,
+		"LETTER":  2,
+		"MIXED":   3,
+	}
+)
+
+func (x Type) Enum() *Type {
+	p := new(Type)
+	*p = x
+	return p
+}
+
+func (x Type) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (Type) Descriptor() protoreflect.EnumDescriptor {
+	return file_api_driver_v1_driver_proto_enumTypes[0].Descriptor()
+}
+
+func (Type) Type() protoreflect.EnumType {
+	return &file_api_driver_v1_driver_proto_enumTypes[0]
+}
+
+func (x Type) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use Type.Descriptor instead.
+func (Type) EnumDescriptor() ([]byte, []int) {
+	return file_api_driver_v1_driver_proto_rawDescGZIP(), []int{0}
+}
+
+type GetVerifyCodeRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Length int32 `protobuf:"varint,1,opt,name=length,proto3" json:"length,omitempty"`
+	Type   Type  `protobuf:"varint,2,opt,name=type,proto3,enum=driver.v1.Type" json:"type,omitempty"`
+}
+
+func (x *GetVerifyCodeRequest) Reset() {
+	*x = GetVerifyCodeRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_driver_v1_driver_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetVerifyCodeRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetVerifyCodeRequest) ProtoMessage() {}
+
+func (x *GetVerifyCodeRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_driver_v1_driver_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetVerifyCodeRequest.ProtoReflect.Descriptor instead.
+func (*GetVerifyCodeRequest) Descriptor() ([]byte, []int) {
+	return file_api_driver_v1_driver_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetVerifyCodeRequest) GetLength() int32 {
+	if x != nil {
+		return x.Length
+	}
+	return 0
+}
+
+func (x *GetVerifyCodeRequest) GetType() Type {
+	if x != nil {
+		return x.Type
+	}
+	return Type_DEFAULT
+}
+
+type GetVerifyCodeReply struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Code    int32  `protobuf:"varint,1,opt,name=code,proto3" json:"code,omitempty"`
+	Message string `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`
+}
+
+func (x *GetVerifyCodeReply) Reset() {
+	*x = GetVerifyCodeReply{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_driver_v1_driver_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetVerifyCodeReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetVerifyCodeReply) ProtoMessage() {}
+
+func (x *GetVerifyCodeReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_driver_v1_driver_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetVerifyCodeReply.ProtoReflect.Descriptor instead.
+func (*GetVerifyCodeReply) Descriptor() ([]byte, []int) {
+	return file_api_driver_v1_driver_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetVerifyCodeReply) GetCode() int32 {
+	if x != nil {
+		return x.Code
+	}
+	return 0
+}
+
+func (x *GetVerifyCodeReply) GetMessage() string {
+	if x != nil {
+		return x.Message
+	}
+	return ""
+}
+
+var File_api_driver_v1_driver_proto protoreflect.FileDescriptor
+
+var file_api_driver_v1_driver_proto_rawDesc = []byte{
+	0x0a, 0x1a, 0x61, 0x70, 0x69, 0x2f, 0x64, 0x72, 0x69, 0x76, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x2f,
+	0x64, 0x72, 0x69, 0x76, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x09, 0x64, 0x72,
+	0x69, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f,
+	0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x53, 0x0a, 0x14, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72, 0x69,
+	0x66, 0x79, 0x43, 0x6f, 0x64, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x16, 0x0a,
+	0x06, 0x6c, 0x65, 0x6e, 0x67, 0x74, 0x68, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x6c,
+	0x65, 0x6e, 0x67, 0x74, 0x68, 0x12, 0x23, 0x0a, 0x04, 0x74, 0x79, 0x70, 0x65, 0x18, 0x02, 0x20,
+	0x01, 0x28, 0x0e, 0x32, 0x0f, 0x2e, 0x64, 0x72, 0x69, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e,
+	0x54, 0x79, 0x70, 0x65, 0x52, 0x04, 0x74, 0x79, 0x70, 0x65, 0x22, 0x42, 0x0a, 0x12, 0x47, 0x65,
+	0x74, 0x56, 0x65, 0x72, 0x69, 0x66, 0x79, 0x43, 0x6f, 0x64, 0x65, 0x52, 0x65, 0x70, 0x6c, 0x79,
+	0x12, 0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04,
+	0x63, 0x6f, 0x64, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18,
+	0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x2a, 0x35,
+	0x0a, 0x04, 0x54, 0x79, 0x70, 0x65, 0x12, 0x0b, 0x0a, 0x07, 0x44, 0x45, 0x46, 0x41, 0x55, 0x4c,
+	0x54, 0x10, 0x00, 0x12, 0x09, 0x0a, 0x05, 0x44, 0x49, 0x47, 0x49, 0x54, 0x10, 0x01, 0x12, 0x0a,
+	0x0a, 0x06, 0x4c, 0x45, 0x54, 0x54, 0x45, 0x52, 0x10, 0x02, 0x12, 0x09, 0x0a, 0x05, 0x4d, 0x49,
+	0x58, 0x45, 0x44, 0x10, 0x03, 0x32, 0x78, 0x0a, 0x06, 0x44, 0x72, 0x69, 0x76, 0x65, 0x72, 0x12,
+	0x6e, 0x0a, 0x0d, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72, 0x69, 0x66, 0x79, 0x43, 0x6f, 0x64, 0x65,
+	0x12, 0x1f, 0x2e, 0x64, 0x72, 0x69, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74,
+	0x56, 0x65, 0x72, 0x69, 0x66, 0x79, 0x43, 0x6f, 0x64, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x1d, 0x2e, 0x64, 0x72, 0x69, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65,
+	0x74, 0x56, 0x65, 0x72, 0x69, 0x66, 0x79, 0x43, 0x6f, 0x64, 0x65, 0x52, 0x65, 0x70, 0x6c, 0x79,
+	0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76,
+	0x31, 0x2f, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72, 0x69, 0x66, 0x79, 0x43, 0x6f, 0x64, 0x65, 0x42,
+	0x18, 0x5a, 0x16, 0x64, 0x72, 0x69, 0x76, 0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x64, 0x72,
+	0x69, 0x76, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x3b, 0x73, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x33,
+}
+
+var (
+	file_api_driver_v1_driver_proto_rawDescOnce sync.Once
+	file_api_driver_v1_driver_proto_rawDescData = file_api_driver_v1_driver_proto_rawDesc
+)
+
+func file_api_driver_v1_driver_proto_rawDescGZIP() []byte {
+	file_api_driver_v1_driver_proto_rawDescOnce.Do(func() {
+		file_api_driver_v1_driver_proto_rawDescData = protoimpl.X.CompressGZIP(file_api_driver_v1_driver_proto_rawDescData)
+	})
+	return file_api_driver_v1_driver_proto_rawDescData
+}
+
+var file_api_driver_v1_driver_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_api_driver_v1_driver_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_driver_v1_driver_proto_goTypes = []any{
+	(Type)(0),                    // 0: driver.v1.Type
+	(*GetVerifyCodeRequest)(nil), // 1: driver.v1.GetVerifyCodeRequest
+	(*GetVerifyCodeReply)(nil),   // 2: driver.v1.GetVerifyCodeReply
+}
+var file_api_driver_v1_driver_proto_depIdxs = []int32{
+	0, // 0: driver.v1.GetVerifyCodeRequest.type:type_name -> driver.v1.Type
+	1, // 1: driver.v1.Driver.GetVerifyCode:input_type -> driver.v1.GetVerifyCodeRequest
+	2, // 2: driver.v1.Driver.GetVerifyCode:output_type -> driver.v1.GetVerifyCodeReply
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_api_driver_v1_driver_proto_init() }
+func file_api_driver_v1_driver_proto_init() {
+	if File_api_driver_v1_driver_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_api_driver_v1_driver_proto_msgTypes[0].Exporter = func(v any, i int) any {
+			switch v := v.(*GetVerifyCodeRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_driver_v1_driver_proto_msgTypes[1].Exporter = func(v any, i int) any {
+			switch v := v.(*GetVerifyCodeReply); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_api_driver_v1_driver_proto_rawDesc,
+			NumEnums:      1,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_driver_v1_driver_proto_goTypes,
+		DependencyIndexes: file_api_driver_v1_driver_proto_depIdxs,
+		EnumInfos:         file_api_driver_v1_driver_proto_enumTypes,
+		MessageInfos:      file_api_driver_v1_driver_proto_msgTypes,
+	}.Build()
+	File_api_driver_v1_driver_proto = out.File
+	file_api_driver_v1_driver_proto_rawDesc = nil
+	file_api_driver_v1_driver_proto_goTypes = nil
+	file_api_driver_v1_driver_proto_depIdxs = nil
+}
