# backend/driver/api/driver/v1/driver_grpc.pb.go
@@ -1,0 +1,121 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             v3.12.4
+// source: api/driver/v1/driver.proto
+
+package s
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Driver_GetVerifyCode_FullMethodName = "/driver.v1.Driver/GetVerifyCode"
+)
+
+// DriverClient is the client API for Driver service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type DriverClient interface {
+	GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequest, opts ...grpc.CallOption) (*GetVerifyCodeReply, error)
+}
+
+type driverClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewDriverClient(cc grpc.ClientConnInterface) DriverClient {
+	return &driverClient{cc}
+}
+
+func (c *driverClient) GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequest, opts ...grpc.CallOption) (*GetVerifyCodeReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetVerifyCodeReply)
+	err := c.cc.Invoke(ctx, Driver_GetVerifyCode_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// DriverServer is the server API for Driver service.
+// All implementations must embed UnimplementedDriverServer
+// for forward compatibility.
+type DriverServer interface {
+	GetVerifyCode(context.Context, *GetVerifyCodeRequest) (*GetVerifyCodeReply, error)
+	mustEmbedUnimplementedDriverServer()
+}
+
+// UnimplementedDriverServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedDriverServer struct{}
+
+func (UnimplementedDriverServer) GetVerifyCode(context.Context, *GetVerifyCodeRequest) (*GetVerifyCodeReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetVerifyCode not implemented")
+}
+func (UnimplementedDriverServer) mustEmbedUnimplementedDriverServer() {}
+func (UnimplementedDriverServer) testEmbeddedByValue()                {}
+
+// UnsafeDriverServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to DriverServer will
+// result in compilation errors.
+type UnsafeDriverServer interface {
+	mustEmbedUnimplementedDriverServer()
+}
+
+func RegisterDriverServer(s grpc.ServiceRegistrar, srv DriverServer) {
+	// If the following call pancis, it indicates UnimplementedDriverServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Driver_ServiceDesc, srv)
+}
+
+func _Driver_GetVerifyCode_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetVerifyCodeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DriverServer).GetVerifyCode(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Driver_GetVerifyCode_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DriverServer).GetVerifyCode(ctx, req.(*GetVerifyCodeRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Driver_ServiceDesc is the grpc.ServiceDesc for Driver service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Driver_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "driver.v1.Driver",
+	HandlerType: (*DriverServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetVerifyCode",
+			Handler:    _Driver_GetVerifyCode_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/driver/v1/driver.proto",
+}
