# backend/driver/api/driver/v1/driver_http.pb.go
@@ -1,0 +1,75 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.8.0
+// - protoc             v3.12.4
+// source: api/driver/v1/driver.proto
+
+package s
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationDriverGetVerifyCode = "/driver.v1.Driver/GetVerifyCode"
+
+type DriverHTTPServer interface {
+	GetVerifyCode(context.Context, *GetVerifyCodeRequest) (*GetVerifyCodeReply, error)
+}
+
+func RegisterDriverHTTPServer(s *http.Server, srv DriverHTTPServer) {
+	r := s.Route("/")
+	r.GET("/api/v1/GetVerifyCode", _Driver_GetVerifyCode0_HTTP_Handler(srv))
+}
+
+func _Driver_GetVerifyCode0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetVerifyCodeRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDriverGetVerifyCode)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetVerifyCode(ctx, req.(*GetVerifyCodeRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetVerifyCodeReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type DriverHTTPClient interface {
+	GetVerifyCode(ctx context.Context, req *GetVerifyCodeRequest, opts ...http.CallOption) (rsp *GetVerifyCodeReply, err error)
+}
+
+type DriverHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewDriverHTTPClient(client *http.Client) DriverHTTPClient {
+	return &DriverHTTPClientImpl{client}
+}
+
+func (c *DriverHTTPClientImpl) GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequest, opts ...http.CallOption) (*GetVerifyCodeReply, error) {
+	var out GetVerifyCodeReply
+	pattern := "/api/v1/GetVerifyCode"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDriverGetVerifyCode))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
